Added food Cards

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body
     position: absolute;
     z-index: -5;
     right: 2 ;
+    width: 100%;
 }
 
 .hero__image  {
@@ -162,6 +163,7 @@ body
         padding: 12px 20px;
         font-size: 20px;
     }
+
     .hero__container{
         display: flex;
         flex-direction: row-reverse;
@@ -169,7 +171,53 @@ body
         justify-content: space-between;
         gap: 10px; 
     }
+
+    .explore__menu__container 
+    {
+        position: relative;
+    }
+
+
+    .explore__menu__rhombus__gradient__bg
+    {
+            position:absolute;
+            left: 0;
+            top: 0;
+
+            height: 100%;
+            width: 100%;
+
+         background-image: linear-gradient(
+            to right,
+          #ff512f 0% , 
+          #dd2476 51% ,
+          #ff512f 100%
+        );    
+       
+
+        /* for bringing rhombus behind the cards
+        and rotating using skewy function */
+
+
+        z-index: -3;
+        transform: skewY(-5deg);
+
+
+    }
+
+
+    .explore__menu__lists {
+        margin-top: 50px;
+        display: flex;
+        gap: 8px;
+    }
+
+    #pizza__card{
+        margin-top: -20px;
+        margin-bottom: 30px; 
+    }
 }
+
  
 
 
@@ -178,10 +226,18 @@ body
     .container{
         max-width: 900px;
     }
+
     .hero__text{
         font-size: 50px;
     }
-    
+
+    .explore__menu__lists{
+        gap: 20px;
+        padding: 0 20px;
+    }
+    .explore__menu__text{
+        font-size: 50px;
+    }
 }
 
 @media (min-width: 1400px) {
